# CrowTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
static/: index.html
static/css/: style.css
static/js/: app.js
